--- a/todo-app/src/components/TodoInsert.scss
+++ b/todo-app/src/components/TodoInsert.scss
@@ -3,6 +3,7 @@
     display: flex;
     background: #495057;
     input{
+        //기본 스타일 초기화
         background: none;
         outline: none;
         border: none;
@@ -17,6 +18,7 @@
         flex: 1;
     }
     button{
+        //기본 스타일 초기화
         background: none;
         outline: none;
         border: none;
